migrate campaigns public endpoints
